--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@ document.getElementById("OS").append(liff.getOS())
   document.getElementById("language").append(liff.getLanguage())
   document.getElementById("version").append(liff.getVersion())
   document.getElementById("accessToken").append(liff.getAccessToken())
-  <!-- document.getElementById("isInClient").append(liff.isInClient())
-   if(liff.isInClient)
-  {
-    document.getElementById("btnLogOut").style.display="none"
-  }else{
-    document.getElementById("btnMsg").style.display="none"
-    document.getElementById("btnScanCode").style.display="none"
-    document.getElementById("btnClose").style.display="none"
-  } -->
+ // document.getElementById("isInClient").append(liff.isInClient())
+ //   if(liff.isInClient)
+ //  {
+ //    document.getElementById("btnLogOut").style.display="none"
+ //  }else{
+ //    document.getElementById("btnMsg").style.display="none"
+ //    document.getElementById("btnScanCode").style.display="none"
+ //    document.getElementById("btnClose").style.display="none"
+ //  }
 
     }
 
