--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   document.getElementById("accessToken").append(liff.getAccessToken())
     }
 
-    async function main() {
-      await liff.init({ liffId: "1661100032-Ab3BWnO7" })
+   function main() {
+    liff.init({ liffId: "1661100032-Ab3BWnO7" })
        getEnvironment()
     }
     main()
