--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     console.log("Hello World!")
   </script> -->
 
- <script src="https://static.line-scdn.net/liff/edge/versions/2.22.2/sdk.js"></script>
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
     function createUniversalLink() {
     }
