--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     }
 
     async function main() {
+       document.getElementById("language").append("เข้า main")
       await liff.init({ liffId: "1661100032-Ab3BWnO7" })
        getEnvironment()
       // getUserProfile()
