--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
        document.getElementById("language").append("เข้า main")
     liff
       .init({
-        liffId: "1661100032-Ab3BWnO7"
+        liffId: "2000120563-DZWYdEYG"
       })
       .then(() => {
         getEnvironment()
