--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
   <title>My LIFF app</title>
   <link rel="stylesheet" href="css/style.css" media="all">
-     
 </head>
 <body>
   <p id="os"><b>OS:</b> </p>
@@ -42,9 +42,8 @@
     console.log("Hello World!")
   </script> -->
 
- <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+ <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
-    import liff from "@line/liff/core";
     function createUniversalLink() {
     }
 
@@ -104,7 +103,7 @@
          document.getElementById("language").append("เข้า Env")
         getEnvironment()
     })
-      .cath((err) => {
+      cath((err) => {
 console.log(err.code, err.message);
         liff.closeWindow();
       });
