--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
        document.getElementById("language").append("เข้า main")
     liff
       .init({
-        liffId: "2000120563-DZWYdEYG"
+        //liffId: "2000120563-DZWYdEYG"
+        liffId: "1661100032-Ab3BWnO7"
       })
       .then(() => {
          document.getElementById("language").append("เข้า Env")
