--- a/index.html
+++ b/index.html
@@ -113,4 +113,6 @@ console.log(err.code, err.message);
     main()
   </script>
 </body>
+   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+ 
 </html>
