--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     }
 
     async function main() {
-       document.getElementById("language").append("เข้า main")
+       document.getElementById("language").append("เข้า main 1")
     liff
       .init({
         //liffId: "2000120563-DZWYdEYG"
