--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
       })
       .then(() => {
          document.getElementById("language").append("เข้า Env")
-        getEnvironment();
+        
         const profile = await liff.getProfile()
         document.getElementById("userId").append(profile.userId)
+        getEnvironment()
     })
       cath((err) => {
 console.log(err.code, err.message);
