--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     />
     <link href="./style.css" rel="stylesheet" />
 
-    <title>TBS Smart Training</title>
+    <title>TBS IT Support</title>
     
     
   </head>
   <body id="body">
     <section id="profile">
-      <img id="pictureUrl" src="https://mokmoon.com/images/ic_liff.png" />
+      <img id="pictureUrl" src="https://db.tbs.tu.ac.th/labcom/images/tid_logo.jpg" height='100' />
       <p id="userId"></p>
       <p id="displayName"></p>
     <!--   <p id="statusMessage"></p>
